# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.697 2008-07-03 17:37:57 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.0 beta4 (2008/07/??)
 - (2008/07/03) Improved OPM package CodeUpgrade by using Version attribute
    for code execurtion (like already exisitng DatabaseUpgrade). If no Version
    is used, CodeUpgrade will performed on every upgrade. For more info see
    developer manual.
 - (2008/07/02) Fixed bug# 3042 - QueueView Sort by Escalation unfunctional.
 - (2008/07/02) Fixed bug# 3045 - Hard coded permission check on merging
    tickets.
 - (2008/07/02) Fixed bug# 3048 - AgentLinkObject shows a wrong search result
    list, if a object cannot link with itself.
 - (2008/07/02) Added AJAX support to ticket move screen.
 - (2008/07/01) Added priority management mask to the admin interface.
 - (2008/07/01) Fixed bug# 3046 - Phone and Email-Ticket needs to get clicked
    twice on "create" to get created.
 - (2008/07/01) Fixed bug# 3047 - Not possible to reset service or sla in
    AgentTicketNote.
 - (2008/07/01) Updated CPAN module Net::POP3::SSLWrapper to version 0.02.
 - (2008/07/01) Updated CPAN module XML::Parser::Lite to version 0.710.05.
 - (2008/07/01) Updated CPAN module Authen::SASL to version 2.11.
 - (2008/07/01) Updated CPAN module MIME::Tools to version 5.427.
 - (2008/07/01) Updated CPAN module File::Temp to version 0.20.
 - (2008/06/30) Implemented options to search update-, response- and solution
    escalation time in TicketSearch().
 - (2008/06/27) Fixed bug# 2960 - DBUpdate-to-2.3.pl script fails.
 - (2008/06/26) Fixed bug# 3036 - Missing link delete checkboxes.
 - (2008/06/26) Fixed bug# 3029 - Search result of linkable objects is not
    sorted correctly.